--- a/labo12/prog04.0-Mochila/Debug/makefile
+++ b/labo12/prog04.0-Mochila/Debug/makefile
@@ -38,19 +38,19 @@ endif
 # Add inputs and outputs from these tool invocations to the build variables 
 
 # All Target
-all: prog04-ImageProcessing
+all: mochila
 
 # Tool invocations
-prog04-ImageProcessing: $(OBJS) $(USER_OBJS)
+mochila: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C++ Linker'
-	gcc -fopenmp  -o "prog04-ImageProcessing" $(OBJS) $(USER_OBJS) $(LIBS)
+	g++  -o "mochila" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(CC_DEPS)$(C++_DEPS)$(EXECUTABLES)$(C_UPPER_DEPS)$(CXX_DEPS)$(OBJS)$(CPP_DEPS)$(C_DEPS) prog04-ImageProcessing
+	-$(RM) $(CC_DEPS)$(C++_DEPS)$(EXECUTABLES)$(C_UPPER_DEPS)$(CXX_DEPS)$(OBJS)$(CPP_DEPS)$(C_DEPS) mochila
 	-@echo ' '
 
 .PHONY: all clean dependents
