--- a/labo12/prog04.0-Mochila/.project
+++ b/labo12/prog04.0-Mochila/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>prog04.0-Mochila</name>
+	<name>mochila</name>
 	<comment></comment>
 	<projects>
 	</projects>
